midterm/colorgame.css
html {
    height: 100%
}

body {
    background: #333333;
    font-family: "Raleway", sans-serif;
    margin: 0;
}

h1 {
    color: #eeeeee;
    font-size: 1.3em;
    font-weight: normal;
    line-height: 1em;
}

button {
    border: none;
    background: none;
    color: #60aadd;
    height: 100%;
    font-weight: 700;
    letter-spacing: 1px;
    font-size: inherit;
    transition: all 0.3s;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
}

button:hover {
    background: #60aadd;
    color: #dddddd;
}

#top {
    text-align: center;
    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
                 0px 8px 13px rgba(0,0,0,0.1),
                 0px 18px 23px rgba(0,0,0,0.1);
    background: #60aadd;
    color: #eeeeee;
    width: 100%;
    margin: 0;
    padding: 0.5em;
}

#randColor {
    font-size: 200%;
    display: inline-block;
}

#menu {
    background: #dddddd;
    color: #000000;
    height: 30px;
    text-align: center;
}

#msg {
    display: inline-block;
    width: 20%;
}

.selected {
    background: #60aadd;
    color: #dddddd;
}

#board {
    margin: 0 auto;
    max-width: 600px;
}

.piece {
    width: 30%;
    padding-bottom: 30%;
    margin: 1.66%;
    float: left;
    border-radius: 50%;
    transition: background 0.6s;
    -webkit-transition: background 0.6s;
    -moz-transition: background 0.6s;
}

